force-app/main/default/objects/VRT_PricingRule__mdt/VRT_PricingRule__mdt.object-meta.xml
<CustomObject>
	<label>Pricing Rule</label>
	<pluralLabel>Pricing Rules</pluralLabel>
</CustomObject>