force-app/main/default/objects/VRT_PricingRule__mdt/fields/VRT_FLG_Active__c.field-meta.xml
<CustomField>
    <fullName>VRT_FLG_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>