force-app/main/default/objects/VRT_PricingRule__mdt/fields/VRT_NUM_PricePerDay__c.field-meta.xml
<CustomField>
    <fullName>VRT_NUM_PricePerDay__c</fullName>
    <label>Price Per Day</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>