force-app/main/default/objects/VRT_PricingRule__mdt/fields/VRT_TXT_Season__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Season__c</fullName>
    <label>Season</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>