force-app/main/default/objects/VRT_PricingRule__mdt/fields/VRT_TXT_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_VehicleType__c</fullName>
    <label>Vehicle Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>